<resources>
    <string name="app_name">ML Integration</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_permissions">Permissions</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_image_labeling">Image Labeling</string>
    <string name="menu_object_detection">Object Detection</string>
    <string name="google_ml_kit">Google ML Kit</string>
</resources>