<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_permissions"
            android:icon="@drawable/icon_permission"
            android:title="@string/menu_permissions" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item android:title="@string/google_ml_kit">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_image_labeling"
                        android:icon="@drawable/icon_label"
                        android:title="@string/menu_image_labeling" />
                    <item
                        android:id="@+id/nav_object_detection"
                        android:icon="@drawable/icon_object_detection"
                        android:title="@string/menu_object_detection" />
                </group>
            </menu>
        </item>
    </group>
</menu>