<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.yogi.mlintegration.features.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_permissions"
        android:name="com.yogi.mlintegration.features.permissions.PermissionsFragment"
        android:label="@string/menu_permissions"
        tools:layout="@layout/fragment_permissions" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.yogi.mlintegration.features.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_image_labeling"
        android:name="com.yogi.mlintegration.features.imageLabeling.ImageLabelingFragment"
        android:label="@string/menu_image_labeling"
        tools:layout="@layout/fragment_image_labeling" />
    <fragment
        android:id="@+id/nav_object_detection"
        android:name="com.yogi.mlintegration.features.objectDetection.ObjectDetectionFragment"
        android:label="@string/menu_object_detection"
        tools:layout="@layout/fragment_object_detection" />
</navigation>